# backend/openapi.json
@@ -223,6 +223,18 @@
             ],
             "title": "Note Date"
           },
+          "notified_at": {
+            "anyOf": [
+              {
+                "format": "date-time",
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Notified At"
+          },
           "pinned_at": {
             "anyOf": [
               {
